# weaviate-t2v-module

./: .flake8  .gitignore  LICENSE  README.md  app.py  pyproject.toml
src/: __init__.py
src/config/: config.yaml
src/features/: vectorizer.py
src/service/: api_calls.rest  fastapi_contracts.py
src/service/docker/: Dockerfile  build_docker_image.py  manage.py
src/utils/: config.py  meta.py
tests/api_tests/: meta_endpoint_test.py  vectors_endpoint_test.py
tests/docker_tests/: meta_docker_test.py  vectors_docker_test.py
tests/src_tests/: meta_test.py  vectorizer_test.py
tests/utils/: endpoint_utils.py  hypothesis.py
